--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tinacms/cli": "^1.6.9",
     "astro": "^5.15.4",
-    "tinacms": "^2.2.10",
-    "@tinacms/cli": "^1.6.9"
+    "lenis": "^1.3.15",
+    "three": "^0.181.2",
+    "tinacms": "^2.2.10"
+  },
+  "devDependencies": {
+    "@types/three": "^0.181.0"
   }
 }
