--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
+    "dev": "tinacms dev -c \"astro dev --host\"",
     "dev:astro": "astro dev",
     "build": "tinacms build && astro build",
     "preview": "astro preview",
@@ -12,8 +12,8 @@
   "dependencies": {
     "@tinacms/cli": "^1.6.9",
     "astro": "^5.15.4",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.15",
-    "three": "^0.181.2",
     "tinacms": "^2.2.10"
   },
   "devDependencies": {
