--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tinacms/auth": "^1.1.0",
     "@tinacms/cli": "^1.6.9",
     "astro": "^5.15.4",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
+    "next-tinacms-cloudinary": "^17.0.2",
     "tinacms": "^2.2.10"
   },
   "devDependencies": {
