--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   },
   "devDependencies": {
     "@types/three": "^0.181.0"
+  },
+  "overrides": {
+    "next-tinacms-cloudinary": {
+      "tinacms": "$tinacms"
+    }
   }
 }
