Fix formatting in package.json by adding missing newline and correcting build script indentation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev --host\"",
     "dev:astro": "astro dev",
-"build": "TINA_SKIP_SCHEMA_CHECK=1 tinacms build && astro build"    "preview": "astro preview",
+    "build": "TINA_SKIP_SCHEMA_CHECK=1 tinacms build && astro build",
+    "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
