--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev --host\"",
     "dev:astro": "astro dev",
-    "build": "NODE_ENV=production tinacms build && astro build",
+    "build": "tinacms build && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
