TinaCMS content update
Co-authored-by: Mason Thompson <mfthompson99@gmail.com>

--- a/src/data/site-settings.json
+++ b/src/data/site-settings.json
@@ -1,5 +1,5 @@
 {
   "contactEmail": "nate_wilkens@hotmail.com",
-  "cvFile": "",
+  "cvFile": "/images/Nate Wilkens Resume.pdf",
   "socialLinks": []
 }
