Update vercel.json to include region configuration for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,6 @@
     "buildCommand": "npm install && npm run build",
     "installCommand": "npm ci --legacy-peer-deps",
     "framework": null,
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "regions": ["sfo1"]
   }
