--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "vercel-build": "npm install --legacy-peer-deps && astro build"
+    "vercel-build": "npm install && astro build"
   },
   "dependencies": {
     "@tinacms/auth": "^1.1.0",
@@ -17,9 +17,10 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "next-tinacms-cloudinary": "^15.0.5",
-    "tinacms": "^2.2.10"
+    "tinacms": "^2.9.5"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/three": "^0.181.0"
   },
   "engines": {
