Update vercel-build script in package.json to skip cloud checks during TinaCMS build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "vercel-build": "npm install && npx tinacms build && astro build"
+    "vercel-build": "npm install && npx tinacms build --skip-cloud-checks && astro build"
   },
   "dependencies": {
     "@tinacms/auth": "^1.1.0",
