--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev --host\"",
-    "dev:astro": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "vercel-build": "npm install && npx tinacms build --skip-cloud-checks && astro build"
+  "dev": "tinacms dev -c \"astro dev --host\"",
+  "dev:astro": "astro dev",
+  "build": "npx tinacms build --skip-cloud-checks && astro build",
+  "preview": "astro preview",
+  "astro": "astro",
+  "vercel-build": "npm install && npx tinacms build --skip-cloud-checks && astro build"
   },
   "dependencies": {
     "@tinacms/auth": "^1.1.0",
